# Hackbit

./: README.md  cmds.md  linux-commands.md
Rust/bare-metal-os/: Cargo.toml
Rust/llm-swarm/: Dockerfile  Dockerfile.example  docker_use.md  fine-tuning.md  use.md
Rust/pub-listener/: use.md
Rust/rnet/: Cargo.toml
bare-metal-os/: Cargo.toml  notes.md
bare-metal-os/.cargo/: config.toml
bare-metal-os/src/: main.rs  vga_buffer.rs
bash/: alch.sh  conditions.sh  log.txt  loop.sh  text.txt
bash/tut/: function.sh  ifelif.sh  shelltest.sh
contracts/applications/: README.md  hardhat.config.ts  package.json
contracts/cross-chain/: .gitignore  ABI.ts.example  README.md  hardhat.config.ts
devops/: system-stats.sh
devops/sys-stats/: README.md
docker/docker102/: docker-compose.yaml
docker/docker103/: Dockerfile.client
docker/flask_redis/: app.py
docker/mcontainer_counter/: Dockerfile.backend  README.md  docker-compose.yaml
firewall-configs/: README.md
firewall-configs/roles/: bastion.rules  database.rules  webserver.rules
firewall-configs/scripts/: apply_firewall.sh
libp2p/go-ping/: go.mod  main.go
llm-swarm/: .gitignore  Cargo.toml  use.md
llm-swarm/inference/src/: lib.rs
llm-swarm/src/: handler.rs  main.rs
prac/src/: area.rs  (+9 more)
pub-listener/: Cargo.toml
queues/: README.md  logs.py  metrics  mm1.md  mma_np.md  pyproject.toml
sys-config/: file-mgt
sys-configs/: .zshrc  commands.md
sys-scripts/: .zshrc  acc-mgt  disk_format.md  file-mgmt  file-mgt  i3-config  i3block-config  proc-mgt  services  user-change  username_change  zshrc
(+134 files in other folders)
