[workspace]
resolver = "2"
members = ["inference"]

[package]
name = "llm-swarm"
version = "0.1.0"
edition = "2021"

[dependencies]
inference = { path = "inference" }  # Add inference crate
axum = "0.8.1"
dotenv = "0.15.0"
env_logger = "0.11.6"
log = "0.4.26"
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }
